# Inspiration-Muse-Agent

./: .gitignore  README.md
oii muse/: LAUNCH.md
oii muse/Frontend demo/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
oii muse/Frontend demo/public/: _headers
oii muse/Frontend demo/src/: vite-env.d.ts
oii muse/Frontend demo/src/__tests__/: _setup.ts  apiClient.test.ts  chipAwareInput.test.tsx  inputIntent.test.ts  localTags.test.ts  services.test.ts
oii muse/Frontend demo/src/app/: App.tsx  config.ts  theme.ts
oii muse/Frontend demo/src/app/components/: Fairy.tsx  PasswordGate.tsx  fairy.css  icons.tsx
oii muse/Frontend demo/src/app/data/: localTags.ts  recipeSlots.ts
oii muse/Frontend demo/src/imports/: TECHNICAL_DEVELOPMENT.md
oii muse/backend/: .env.example  .gitignore  pyproject.toml  railway.json  render.yaml  requirements.txt
oii muse/backend/app/: main.py
oii muse/backend/app/api/: generate.py  health.py  refine.py  tags.py
oii muse/backend/app/core/: circuit_breaker.py  config.py  http_client.py  logging.py  rate_limit.py  security.py
oii muse/backend/app/prompts/: chapter_insert.py  character_result.py  dynamic_tags.py  refine.py  refine_smart.py  refresh_swaps.py  story_chapters.py  story_result.py  worldview_result.py
oii muse/backend/app/schemas/: chat.py  common.py  result.py  tags.py
oii muse/backend/app/services/: ai_provider.py  generate_service.py  json_utils.py  recipe_utils.py  refine_service.py  swap_service.py  tag_service.py
(+30 files in other folders)
